...
@Composable
fun CalculatorScreen(navigationActions: NavigationActions) {
  var display by remember { mutableStateOf("") }
  var cursorPosition by remember { mutableStateOf(0) }
  var result by remember { mutableStateOf("") }

  var selectedMenu by remember { mutableStateOf("Basic") }
  var showHistoryDialog by remember { mutableStateOf(false) }

  val history = remember { mutableStateListOf<Pair<String, String>>() }

  val basicButtons =
      listOf(
...
          listOf("e", "x", "1", "2", "3", "-"),
          listOf("π", "%", "0", ".", "=", "+"))

  val functionButtons =
      listOf(
          listOf("exp", "sin", "cos", "tan", "cot"),
          listOf("ln", "arcsin", "arccos", "arctan", "arccot"),
          listOf("log", "sinh", "cosh", "tanh", "coth"),
          listOf("rad", "arsinh", "arcosh", "artanh", "arcoth"))

  val buttonsLayout =
      when (selectedMenu) {
        "Basic" -> basicButtons
...
  Scaffold(
      topBar = { TopNavigationBar(navigationActions, screenTitle = null) },
      backgroundColor = MaterialTheme.colorScheme.background) {
        Column(modifier = Modifier.fillMaxSize().padding(16.dp)) {
          Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceEvenly) {
            MenuButton("Basic", selectedMenu == "Basic") { selectedMenu = "Basic" }
            MenuButton("Functions", selectedMenu == "Functions") { selectedMenu = "Functions" }
          }

          Spacer(modifier = Modifier.height(16.dp))

          Box(
              modifier = Modifier.fillMaxWidth().weight(1f).padding(16.dp).testTag("display"),
              contentAlignment = Alignment.TopStart) {
                Column(modifier = Modifier.fillMaxWidth()) {
                  Row(
                      modifier = Modifier.fillMaxWidth(),
                      horizontalArrangement = Arrangement.SpaceBetween,
                      verticalAlignment = Alignment.CenterVertically) {
...
                        Text(
                            text = displayWithCursor,
                            fontSize = 26.sp,
                            fontWeight = FontWeight.SemiBold,
                            textAlign = TextAlign.Start,
                            color = MaterialTheme.colorScheme.onBackground,
                            modifier = Modifier.weight(1f).testTag("displayText"))

                        IconButton(
                            onClick = {
                              display = ""
                              cursorPosition = 0
                              result = ""
                            },
                            modifier = Modifier.testTag("clearButton")) {
                              Icon(
                                  Icons.Default.Cancel,
                                  contentDescription = "C",
                                  tint = Color.LightGray)
                            }
                      }
...
                          Text(
                              text = result,
                              fontSize = 20.sp,
                              color = Color.Gray,
                              textAlign = TextAlign.Start,
                              fontWeight = FontWeight.Light,
                              modifier = Modifier.padding(top = 8.dp).testTag("resultText"))
                        }
                  }
                }
              }

          Column(
...
